Bug 241646 Shift+Mousewheel (scrollwheel) behavior backwards, unintuitive not correctable with configuration patch by sand@blarg.net r=bryner sr=roc